Experience and diplome